recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
increment=3
if(steps==0)
return
else {
	avance(3)
	gauche(90)
	spiral(steps-1,90,3+increment)
}
}